tests/query_errors/local_in_select/error.txt
Error: 
    1 | select
    2 | a + b
      | ^^^^^ Local variables are not allowed here
    3 | from in into out;
